- added little jvm startup param for unsafe memory allocation warning in java24